--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,18 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-app>
+  <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title>
+        Sign in
+      </ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+  <ion-content [fullscreen]="true">
+
+      <ion-button>Create Account</ion-button>
+      <ion-img style="width: 300px; height: 300px;" src="../assets/img/parent.jpg" (click)="parentSignIn()" id="parentBtn"></ion-img>
+      <ion-img style="width: 300px; height: 300px;" src="../assets/img/child.png" (click)="childSignIn()" id="childBtn"></ion-img>
+
+  </ion-content>
+</ion-app>
