--- a/src/app/parent-sign-in-page/parent-sign-in-page.page.html
+++ b/src/app/parent-sign-in-page/parent-sign-in-page.page.html
@@ -15,14 +15,11 @@
             </ion-card-header>
             <ion-card-content>
               <ion-item>
-                <ion-label position="floating" id="reason">Username</ion-label>
+                <ion-label position="floating" id="parentUsername">Username</ion-label>
                 <ion-input type="text"></ion-input>
               </ion-item>
-
-              
-
               <ion-item>
-                <ion-label position="floating" id="amount">Password</ion-label>
+                <ion-label position="floating" id="parentPassword">Password</ion-label>
                 <ion-input type="text"></ion-input>
               </ion-item>
               <ion-button id="button-confirm">
