--- a/src/app/child-sign-in-page/child-sign-in-page.page.html
+++ b/src/app/child-sign-in-page/child-sign-in-page.page.html
@@ -1,9 +1,34 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>childSignInPage</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-app>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Child Signin</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-<ion-content>
-
-</ion-content>
+  <ion-content [fullscreen]="true">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-md="6" offset-md="3">
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>Login</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-item>
+                <ion-label position="floating" id="childUsername">Username</ion-label>
+                <ion-input type="text"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating" id="childPassword">Password</ion-label>
+                <ion-input type="text"></ion-input>
+              </ion-item>
+              <ion-button id="button-confirm">
+                Sign in
+              </ion-button>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
+</ion-app>
