--- a/src/app/new-account-page/new-account-page.page.html
+++ b/src/app/new-account-page/new-account-page.page.html
@@ -49,7 +49,7 @@
                 <ion-checkbox color="primary"></ion-checkbox>
               </ion-item>
 
-              <ion-button id="createAccountButton">
+              <ion-button id="createAccountButton" (click)="checkNewAccount()">
                 Create Account
               </ion-button>
 
