--- a/src/app/parent-sign-in-page/parent-sign-in-page.page.html
+++ b/src/app/parent-sign-in-page/parent-sign-in-page.page.html
@@ -22,7 +22,7 @@
                 <ion-label position="floating" id="parentPassword">Password</ion-label>
                 <ion-input type="text"></ion-input>
               </ion-item>
-              <ion-button id="button-confirm">
+              <ion-button id="button-confirm" (click)="checkParentSignIn()">
                 Sign in
               </ion-button>
             </ion-card-content>
