--- a/src/app/new-account-page/new-account-page.page.html
+++ b/src/app/new-account-page/new-account-page.page.html
@@ -16,43 +16,47 @@
             <ion-card-content>
               <ion-item>
                 <ion-label position="floating" id="createFirstName">First Name</ion-label>
-                <ion-input type="text"></ion-input>
+                <ion-input type="text" [(ngModel)]="user.firstName"></ion-input>
               </ion-item>
 
               <ion-item>
                 <ion-label position="floating" id="createLastName">Last Name</ion-label>
-                <ion-input type="text"></ion-input>
+                <ion-input type="text" [(ngModel)]="user.lastName"></ion-input>
               </ion-item>
 
               <ion-item>
                 <ion-label position="floating" id="createEmail">Email</ion-label>
-                <ion-input type="email"></ion-input>
+                <ion-input type="email" [(ngModel)]="user.email"></ion-input>
               </ion-item>
 
               <ion-item>
                 <ion-label position="floating" id="createPhone">Phone Number</ion-label>
-                <ion-input type="tel"></ion-input>
+                <ion-input type="tel" [(ngModel)]="user.phoneNumber"></ion-input>
+              </ion-item>
+
+              <ion-item>
+                <ion-label position="floating" id="createUsername">Username</ion-label>
+                <ion-input type="text" [(ngModel)]="user.username"></ion-input>
               </ion-item>
 
               <ion-item>
                 <ion-label position="floating" id="createPassword1">Password</ion-label>
-                <ion-input type="text"></ion-input>
+                <ion-input type="text" [(ngModel)]="user.password1"></ion-input>
               </ion-item>
 
               <ion-item>
                 <ion-label position="floating" id="createPassword2">Password</ion-label>
-                <ion-input type="text"></ion-input>
+                <ion-input type="text" [(ngModel)]="user.password2"></ion-input>
               </ion-item>
 
               <ion-item>
                 <ion-label  id="isChild">Child</ion-label>
-                <ion-checkbox color="primary"></ion-checkbox>
+                <ion-checkbox color="primary" [(ngModel)]="user.isChild"></ion-checkbox>
               </ion-item>
 
               <ion-button id="createAccountButton" (click)="checkNewAccount()">
                 Create Account
               </ion-button>
-
             </ion-card-content>
           </ion-card>
         </ion-col>
