--- a/src/app/child-tabs/child-tabs.page.html
+++ b/src/app/child-tabs/child-tabs.page.html
@@ -7,28 +7,19 @@
 
   <ion-content>
     <ion-tabs>
-      <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="schedule">
-          <ion-icon name="calendar"></ion-icon>
-          <ion-label>Schedule</ion-label>
-          <ion-badge>6</ion-badge>
-        </ion-tab-button>
-
-        <ion-tab-button tab="speakers">
-          <ion-icon name="person-circle"></ion-icon>
-          <ion-label>Speakers</ion-label>
-        </ion-tab-button>
-
-        <ion-tab-button tab="map">
-          <ion-icon name="map"></ion-icon>
-          <ion-label>Map</ion-label>
-        </ion-tab-button>
-
-        <ion-tab-button tab="about">
-          <ion-icon name="information-circle"></ion-icon>
-          <ion-label>About</ion-label>
-        </ion-tab-button>
-      </ion-tab-bar>
-    </ion-tabs>
-  </ion-content>
-</ion-app>
+     <ion-tab-bar slot="bottom">
+       <ion-tab-button tab="tab1">
+         <ion-icon name="flash"></ion-icon>
+         <ion-label>Tab One</ion-label>
+       </ion-tab-button>
+       <ion-tab-button tab="tab2">
+         <ion-icon name="apps"></ion-icon>
+         <ion-label>Tab Two</ion-label>
+       </ion-tab-button>
+       <ion-tab-button tab="tab3">
+         <ion-icon name="send"></ion-icon>
+         <ion-label>Tab Three</ion-label>
+       </ion-tab-button>
+     </ion-tab-bar>
+   </ion-tabs>
+  </ion-app>
